test_suite5/ALAN/test_suite/alan-2022-examples/failing/005440_mutation.alan
source G81k begin leave not > end
